# ProiectGrafica2

./: .gitignore  10_01_Shader.frag  10_01_Shader.vert  CMakeLists.txt  README.md  main.cpp
SRC/: objloader.cpp
source/: 10_01_Shader.frag  10_01_Shader.vert  Ground.cpp  Ground.h  House.cpp  House.h  MainShader.frag  MainShader.vert  Model.cpp  Model.h  Plane.cpp  Plane.h  RenderedObject.cpp  RenderedObject.h  Shader.cpp  Shader.h  main.cpp
source/resources/: MainShader.frag  MainShader.vert
